<resources>
    <string name="app_name">NPHS Homework</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_screen">Welcome to the NPHS Homework App!</string>
    <string name="action_refresh">Refresh</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register">Create new account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot">Forgot password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_class">ClassActivity</string>

    <!-- Strings related to classes -->
    <string name="class1">English</string>
    <string name="class2">Math</string>
    <string name="class3">History</string>
    <string name="class4">Science</string>
    <string name="class5">Elective</string>
    <string name="class6">Elective2</string>
    <string name="title_activity_detail">Homework Details</string>
    <string name="details">Details of Homework</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <!-- Strings related to settings -->
    <string name="pref_night_notif">Night Reminders</string>
    <string name="pref_morn_notif">Morning Reminders</string>
    <string name="pref_notif">REMINDERS</string>
    <string name="pref_account">ACCOUNT</string>
    <string name="pref_morn_text">Send homework reminders at 6 AM.</string>
    <string name="pref_night_text">Send homework reminders at 6 PM.</string>
    <string name="pref_change_pass_title">Change Password</string>
    <string name="pref_change_pass_text">Set a new password for your account.</string>
    <string name="pref_change_class_title">Change Classes</string>
    <string name="pref_change_class_text">Choose different classes on your schedule.</string>
    <string name="title_activity_class_picker">ClassPickerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
