<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/pref_notif"
        android:key="pref_notif_settings">
        <SwitchPreference
            android:key="pref_morn_notif_key"
            android:title="@string/pref_morn_notif"
            android:summary="@string/pref_morn_text"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="pref_night_notif_key"
            android:title="@string/pref_night_notif"
            android:summary="@string/pref_night_text"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_account"
        android:key="pref_acc_settings">

    </PreferenceCategory>


</PreferenceScreen>